Use toList() instead of collect(Collectors.toList()) in GameService.findAll() method